--- a/src/app/modules/customer/footer/footer.component.html
+++ b/src/app/modules/customer/footer/footer.component.html
@@ -129,7 +129,7 @@
                 <a href="wishlist.html" class="light-text">Your Wishlist</a>
               </li>
               <li>
-                <a href="faq.html" class="light-text">FAQs</a>
+                <a href="/faq" class="light-text">FAQs</a>
               </li>
             </ul>
           </div>
