about_us&contactcomponent

--- a/src/app/modules/customer/footer/footer.component.html
+++ b/src/app/modules/customer/footer/footer.component.html
@@ -35,7 +35,10 @@
       href="../footer/assets/css/style.css"
     />
   </head>
-  <footer class="section-t-space footer-section-2 footer-section-4">
+  <footer
+    class="section-t-space footer-section-2 footer-section-4"
+    style="width: fit-content"
+  >
     <div class="container-fluid-lg">
       <div class="main-footer">
         <div class="row g-md-4 gy-sm-5">
@@ -88,21 +91,19 @@
             </div>
             <ul class="footer-list footer-contact footer-list-light">
               <li>
-                <a href="about-us.html" class="light-text">About Us</a>
+                <a href="/about-us" class="light-text">About Us</a>
               </li>
               <li>
-                <a href="contact-us.html" class="light-text">Contact Us</a>
+                <a href="/contact" class="light-text">Contact Us</a>
               </li>
               <li>
-                <a href="term_condition.html" class="light-text"
-                  >Terms & Conditions</a
-                >
+                <a href="" class="light-text">Terms & Conditions</a>
               </li>
               <li>
-                <a href="careers.html" class="light-text">Careers</a>
+                <a href="" class="light-text">Careers</a>
               </li>
               <li>
-                <a href="blog-list.html" class="light-text">Latest Blog</a>
+                <a href="" class="light-text">Latest Blog</a>
               </li>
             </ul>
           </div>
@@ -113,20 +114,16 @@
             </div>
             <ul class="footer-list footer-list-light footer-contact">
               <li>
-                <a href="order-success.html" class="light-text">Your Order</a>
+                <a href="" class="light-text">Your Order</a>
               </li>
               <li>
-                <a href="user-dashboard.html" class="light-text"
-                  >Your Account</a
-                >
+                <a href="" class="light-text">Your Account</a>
               </li>
               <li>
-                <a href="order-tracking.html" class="light-text"
-                  >Track Orders</a
-                >
+                <a href="" class="light-text">Track Orders</a>
               </li>
               <li>
-                <a href="wishlist.html" class="light-text">Your Wishlist</a>
+                <a href="" class="light-text">Your Wishlist</a>
               </li>
               <li>
                 <a href="/faq" class="light-text">FAQs</a>
@@ -140,21 +137,19 @@
             </div>
             <ul class="footer-list footer-list-light footer-contact">
               <li>
-                <a href="vegetables-demo.html" class="light-text"
-                  >Fresh Vegetables</a
-                >
+                <a href="" class="light-text">Fresh Vegetables</a>
               </li>
               <li>
-                <a href="spice-demo.html" class="light-text">Hot Spice</a>
+                <a href="" class="light-text">Hot Spice</a>
               </li>
               <li>
-                <a href="bags-demo.html" class="light-text">Brand New Bags</a>
+                <a href="" class="light-text">Brand New Bags</a>
               </li>
               <li>
-                <a href="bakery-demo.html" class="light-text">New Bakery</a>
+                <a href="" class="light-text">New Bakery</a>
               </li>
               <li>
-                <a href="grocery-demo.html" class="light-text">New Grocery</a>
+                <a href="" class="light-text">New Grocery</a>
               </li>
             </ul>
           </div>
