--- a/src/app/modules/customer/mid-footer/mid-footer.component.html
+++ b/src/app/modules/customer/mid-footer/mid-footer.component.html
@@ -38,7 +38,7 @@
   <section class="category-panel section-b-space m-0">
     <div class="container-fluid-lg">
       <div class="title">
-        <h2 style="color: #fff">Browse by category</h2>
+        <h2 style="color: black">Browse by category</h2>
       </div>
       <div class="category-panel-slider no-arrow">
         <div>
