--- a/src/app/modules/customer/mid-header/mid-header.component.html
+++ b/src/app/modules/customer/mid-header/mid-header.component.html
@@ -9,7 +9,7 @@
         <img
           src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:100/q:80/plain/https://dashboard.cellphones.com.vn/storage/laptop-acer-nghiem-thu-07-10.jpg"
           class="d-block w-100 rounded"
-          style="height: 400px; width: fit-content"
+          style="height: fit-content; width: fit-content"
           alt="..."
         />
       </div>
@@ -17,15 +17,15 @@
         <img
           src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:100/q:80/plain/https://dashboard.cellphones.com.vn/storage/laptop-acer-nghiem-thu-07-10.jpg"
           class="d-block w-100 rounded"
-          style="height: 400px; width: fit-content"
+          style="height: fit-content; width: fit-content"
           alt="..."
         />
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item active">
         <img
           src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:100/q:80/plain/https://dashboard.cellphones.com.vn/storage/intel%20evo.png"
           class="d-block w-100 rounded"
-          style="height: 400px; width: fit-content"
+          style="height: fit-content; width: fit-content"
           alt="..."
         />
       </div>
