--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -34,10 +34,9 @@
       <div class="container-fluid-lg w-100">
         <div class="row">
           <div style="display: flex; padding: 5px">
-            <div
-              class="image-contain"
-              style="background-origin: padding-box"
-            ></div>
+            <div class="image-contain" style="background-origin: padding-box">
+              
+            </div>
             <div class="col-xxl-4 col-xl-5 col-lg-6 col-sm-8 mx-auto">
               <div class="log-in-box">
                 <div class="log-in-title">
@@ -131,7 +130,7 @@
 
                 <div class="sign-up-box">
                   <h4>Haven't an account?</h4>
-                  <a href="http://localhost:4200/register">SignUp</a>
+                  <a href="/register">SignUp</a>
                 </div>
               </div>
             </div>
